--- a/A_Study/2_Kind/3_kind_cluster1-4.yml
+++ b/A_Study/2_Kind/3_kind_cluster1-4.yml
@@ -16,3 +16,9 @@ nodes:
 
   - role : worker
     image : kindest/node:v1.34.0
+
+  - role : worker
+    image : kindest/node:v1.34.0
+
+  - role : worker
+    image : kindest/node:v1.34.0
