--- a/A_Study/2_Kind/P4/deployment.yml
+++ b/A_Study/2_Kind/P4/deployment.yml
@@ -9,24 +9,13 @@ metadata:
 spec:
   replicas: 4
   selector:
-    matchLabels:
+    matchLabels:                  # G:  SELECTOR -> Temp_late
       app: label-nginx
-  # strategy:
-  #   rollingUpdate:
-  #     maxSurge: 25%
-  #     maxUnavailable: 25%
-  #   type: RollingUpdate
-  template:
+  template:                       # Y: Template => POD
     metadata:
-      # annotations:
-      #   kubectl.kubernetes.io/default-container:  myjob
-      labels:
+      labels:                     # B: TEMP_LATE
         app: label-nginx
     spec:
-      # initContainers:
-        # Init containers are exactly like regular containers, except:
-          # - Init containers always run to completion.
-          # - Each init container must complete successfully before the next one starts.
       containers:
       - name: nginx-app
         image: nginx:latest
