--- a/A_Study/2_Kind/P4/deployment.yml
+++ b/A_Study/2_Kind/P4/deployment.yml
@@ -17,7 +17,7 @@ spec:
         app: label-nginx
     spec:
       containers:
-      - name: nginx-app
+      - name: nginx-deployment-container
         image: nginx:latest
         # imagePullPolicy: 
         resources:
