--- a/A_Study/2_Kind/P4/namespace.yml
+++ b/A_Study/2_Kind/P4/namespace.yml
@@ -5,9 +5,15 @@ metadata:
 
 ---
 
-
 kind: Namespace
 apiVersion: v1
 metadata:
   name: namespace-2
+
+---
+
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: namespace-3
 
