--- a/A_Study/2_Kind/d5/namespace.yml
+++ b/A_Study/2_Kind/d5/namespace.yml
@@ -1,19 +1,13 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: ns-1
+  name: nspace-1
 
 ---
 
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: ns-2
-
----
-kind: Namespace
-apiVersion: v1
-metadata:
-  name: ns-3
+  name: nspace-2
 
 ---
