--- a/A_Study/2_Kind/d7/mongo-full.yml
+++ b/A_Study/2_Kind/d7/mongo-full.yml
@@ -77,6 +77,15 @@ spec:
         ports:
         - containerPort: 27017
           name: mongo
+        env:
+          - name: MONGO_INITDB_ROOT_USERNAME
+            value: "admin"
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            value: "asdfasdf"
+          - name: MONGO_INITDB_DATABASE
+            value: "mydb"
+        command: ["mongod"] # mongo command wored in shell
+        args: ["--auth"]
         volumeMounts:
           - name: mongodb-vol # Y: This must match |G=>3|
             mountPath: /data/db # defaault mongo storege dir.
